--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div id="modal">
       <h2>Error!</h2>
       <p id="modal-message"></p>
+      <div id="modal" class="hidden">
+        <!-- Modal content goes here -->
+      </div>
+      
     </div>
 
     <header>
